fix(logo-list): prevent Safari flex item overlap

--- a/src/assets/css/components/_image-list.scss
+++ b/src/assets/css/components/_image-list.scss
@@ -35,9 +35,9 @@
   }
 
   .logo-list__item {
-    flex-basis: auto;
     flex-shrink: 0;
     flex-grow: 0;
+    width: auto;
     padding-left: 6rem;
   }
 
