--- a/src/assets/css/components/_logo-list.scss
+++ b/src/assets/css/components/_logo-list.scss
@@ -45,7 +45,9 @@
 }
 
 .logo-list__item {
-  flex: 0 0 8rem;
+  flex: none;
+  min-width: 0;
+  width: 8rem;
 }
 
 .logo-list__image {
@@ -54,6 +56,7 @@
   img,
   svg {
     max-height: 4rem;
+    max-width: 100%;
     margin: 0 auto;
     display: block;
   }
@@ -86,7 +89,7 @@
   }
 
   .logo-list__item {
-    flex-basis: 10rem;
+    width: 10rem;
   }
 
   .logo-list__image {
